--- a/app/globals.css
+++ b/app/globals.css
@@ -14,13 +14,18 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #fefdfd;
     --foreground: #ededed;
   }
 }
-
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  background-color: #f9f9f9; /* or white: #fff */
+  color: #000;
+  margin: 0;
+  font-family: Arial, sans-serif;
+}
+
+
+#__next-route-announcer {
+  display: none !important;
 }
